--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body onload="pageLoad()">
+    <div class="auth-div">
+        <button id="login-button" onclick="login()">Login</button>
+        <img id="profile-pic" alt="Profile Picture" height=50px src= />
+        <p id="login-text"></p>
+        <button id="logout-button" onclick="logout()">Logout</button>
+    </div>
     <div class="media">
     </div>
     <div type="text" class="input" />
