--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Bird ID Practice Test</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://browser.sentry-cdn.com/5.10.2/bundle.min.js"
+        integrity="sha384-ssBfXiBvlVC7bdA/VX03S88B5MwXQWdnpJRbUYFPgswlOBwETwTp6F3SMUNpo9M9" crossorigin="anonymous">
+    </script>
     <script src=index.js></script>
 </head>
 
