--- a/status/maintenance.html
+++ b/status/maintenance.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" />
     <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
-      <script src="https://cdn.statuspage.io/vendor/moment-timezone-with-data.js"></script>
-      <script src="https://cdn.statuspage.io/vendor/jstz.js"></script>
-      <script src="https://cdn.statuspage.io/vendor/localtimes.js"></script>
-
     <style>
      * {
          -moz-box-sizing:border-box;
@@ -195,7 +190,7 @@
 
 
     .primary-text-color {
-      color: rgba(0, 0, 0, 1) !important;
+      color: rgb(255, 255, 255) !important;
     }
 
     .secondary-text-color {
@@ -297,62 +292,7 @@
          });
        }
      };
-
-
-     ErrorPage.prototype.createTimeRangeTag = function(start, end) {
-       return (
-         '<time utime=' + start + ' simple_format="MMM DD, YYYY HH:mm">' + start + '</time> - <time utime=' + end + ' simple_format="MMM DD, YYYY HH:mm">' + end + '</time>.'
-       )
-     };
-
-
-     ErrorPage.prototype.handleStatusFetchSuccess = function (pageType, data) {
-       if (pageType == '503') {
-         $('#replace-with-fetched-data').html(data.status.description);
-       } else {
-         if (!!data.scheduled_maintenances.length) {
-           var maint = data.scheduled_maintenances[0];
-           $('#replace-with-fetched-data').html(this.createTimeRangeTag(maint.scheduled_for, maint.scheduled_until));
-           $.fn.localizeTime();
-         }
-         else {
-           $('#replace-with-fetched-data').html('<em>(there are no active scheduled maintenances)</em>');
-         }
-       }
-     };
-
-
-     ErrorPage.prototype.handleStatusFetchFail = function (pageType) {
-       $('#replace-with-fetched-data').html('<em>(enter a valid Statuspage url)</em>');
-     };
-
-
-     ErrorPage.prototype.fetchStatus = function (pageUrl, pageType) {
-       //console.log('in app.js fetch');
-       if (!pageUrl || !pageType || pageType == '404') return;
-
-       var url = ''
-         , self = this;
-
-       if (pageType == '503') {
-         url = pageUrl + '/api/v2/status.json';
-       }
-       else {
-         url = pageUrl + '/api/v2/scheduled-maintenances/active.json';
-       }
-
-       $.ajax({
-         type : "GET",
-         url : url,
-       }).success(function (data, status) {
-         //console.log('success');
-         self.handleStatusFetchSuccess(pageType, data);
-       }).fail(function (xhr, msg) {
-         //console.log('fail');
-         self.handleStatusFetchFail(pageType);
-       });
-
-     };
+     
      var ep = new ErrorPage('body', "maintenance", "plain");
      ep.initialize();
 
@@ -362,14 +302,6 @@
      });
 
     </script>
-
-    
-      <!-- OneTrust Cookies Consent Notice (statuspage.io, en-GB) start -->
-  <script src="https://cdn.cookielaw.org/consent/0800f092-2124-46ec-b11d-b4f48b677302.js" type="text/javascript" charset="UTF-8"></script>
-  <script type="text/javascript">
-    function OptanonWrapper() { }
-  </script>
-  <!-- OneTrust Cookies Consent Notice (statuspage.io, en-GB) end -->
 
   </body>
 </html>
