--- a/index.html
+++ b/index.html
@@ -2,58 +2,64 @@
 <html>
 
 <head>
-    <title>Bird ID Practice Test</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://browser.sentry-cdn.com/5.10.2/bundle.min.js"
-        integrity="sha384-ssBfXiBvlVC7bdA/VX03S88B5MwXQWdnpJRbUYFPgswlOBwETwTp6F3SMUNpo9M9" crossorigin="anonymous">
-    </script>
-    <script src=index.js></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Bird-ID | About</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 
-<body onload="pageLoad()">
-    <div class="auth-div">
-        <button id="login-button" onclick="login()">Login</button>
-        <img id="profile-pic" alt="Profile Picture" height=50px src= />
-        <p id="login-text"></p>
-        <button id="logout-button" onclick="logout()">Logout</button>
+<body>
+  <!-- navigation bar -->
+  <div id="navigator">
+    <strong>Bird-ID</strong> - a website for aspiring ornithologists
+    <div class="toggle"></div>
+    <div id="links">
+      <a href="index.html"> About </a>
+      <a href="contact.html"> Contact </a>
+      <a href="use2.html" id="button"><strong> Use! </strong></a>
     </div>
-    <div class="media">
-    </div>
-    <div type="text" class="input" />
-    <input id="guess">
-    <button id="check" onclick="check()">Check</button>
-    <button id="refresh" onclick="setMedia(mediaOptions.media, mediaOptions.bw, mediaOptions.addon)">Refresh</button>
-    <button id="skip" onclick="skip()">Skip</button>
-    <button id="hint" onclick="hint()">Hint</button>
-    <button id="options" onclick='$("#optionMenu").toggle()'>Options</button>
-    </div>
-    <div class="status"></div>
-    <div id="optionMenu">
-        <form>
-            <h3>Options</h3>
-            <h4>Media Type</h4>
-            <select class="mediaType" name="mediaType">
-                <option value="images">Images</option>
-                <option value="songs">Songs</option>
-            </select>
-            <h4>Black and White (for images)</h4>
-            <input class="bw" type="checkbox" name="bw"> black and white?<br>
-            <h4>Addons (for images)</h4>
-            <select class="addons" name="addons">
-                <option value="">None</option>
-                <option value="female">Female</option>
-                <option value="juvenile">Juvenile</option>
-            </select>
-        </form>
-        <button id="save" onclick="updateOptions()">Save Changes</button>
-    </div>
-    <div class="stats">
-        <h2>Stats:</h2>
-        <p id="correct">Correct</p>
-        <p id="total">Total</p>
-        <p id="streak">in a row</p>
-    </div>
+  </div>
+
+
+  <div id="info">
+    <h2>Usage</h2>
+    <p>
+      This bot uses bird images and sounds from Cornell's Maucalay Library to help you practice identifying them!
+      <br><br>
+      Discord Commands:
+      <ul>
+        <li>Type <mark>b!b</mark> or <mark>b.b</mark> for a new bird.</li>
+        <li>Type <mark>b!c (answer)</mark> or <mark>b.c (answer)</mark> to check your answer.</li>
+        <li>Type <mark>b!s</mark> or <mark>b.s</mark> for a bird call.</li>
+        <li>Type <mark>b!cs (answer)</mark> or <mark>b.cs (answer)</mark> to check the song.</li>
+      </ul>
+    </p>
+    <h2>Creators</h2>
+    <p>
+      This code was written by Person_v1.32 (person_v1.32#7883), hmmm (hmmm#5658), and EraserBird (EraserBird#0520).
+      They are all students who enjoy participating in Science Olympiad and writing code!
+      <br> <br>
+      The code can be found on Github:<br> <a href="https://github.com/tctree333/Bird-ID">Discord Bot</a> <br>
+      <a href="https://github.com/tctree333/Bird-ID-site/blob/master/index.js"> Website</a>
+    </p>
+    <h2>Science Olympiad</h2>
+    <p>
+      Science Olympiad is an academic competition for K12 students where they compete in a variety of science and
+      engineering topics. <br>
+      This bot was written based off the Science Olympiad's National Bird List. This bot is not affiliated with Science
+      Olympiad. The official page for SciOly is here: LINK.
+    </p>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('.toggle').click(function () {
+        $('.toggle').toggleClass('active')
+        $('body').toggleClass('night')
+      })
+    })
+  </script>
 </body>
 
 </html>
