--- a/use.html
+++ b/use.html
@@ -4,6 +4,8 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://browser.sentry-cdn.com/5.10.2/bundle.min.js"
+        integrity="sha384-ssBfXiBvlVC7bdA/VX03S88B5MwXQWdnpJRbUYFPgswlOBwETwTp6F3SMUNpo9M9" crossorigin="anonymous"></script>
     <script src=index.js></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
