--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="links">
       <a href="index.html"> About </a>
       <a href="contact.html"> Contact </a>
-      <a href="use2.html" id="button"><strong> Use! </strong></a>
+      <a href="use.html" id="button"><strong> Use! </strong></a>
     </div>
   </div>
 
@@ -41,14 +41,14 @@
       They are all students who enjoy participating in Science Olympiad and writing code!
       <br> <br>
       The code can be found on Github:<br> <a href="https://github.com/tctree333/Bird-ID">Discord Bot</a> <br>
-      <a href="https://github.com/tctree333/Bird-ID-site/blob/master/index.js"> Website</a>
+      <a href="https://github.com/tctree333/Bird-ID-site/"> Website</a>
     </p>
     <h2>Science Olympiad</h2>
     <p>
       Science Olympiad is an academic competition for K12 students where they compete in a variety of science and
       engineering topics. <br>
       This bot was written based off the Science Olympiad's National Bird List. This bot is not affiliated with Science
-      Olympiad. The official page for SciOly is here: LINK.
+      Olympiad. The official page for SciOly is <a href='https://soinc.org'>here</a>.
     </p>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -58,6 +58,7 @@
         $('.toggle').toggleClass('active')
         $('body').toggleClass('night')
       })
+      $('.toggle').click()
     })
   </script>
 </body>
