--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <div id="links">
       <a href="index.html"> About </a>
       <a href="contact.html"> Contact </a>
-      <a href="use.html" id="button"><strong> Use! </strong></a>
+      <a href="use.html" class="button"><strong> Use! </strong></a>
     </div>
   </div>
 
