--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -12,7 +12,7 @@
 		<!-- navigation bar -->
 		<div id="navigator">
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
-			<div class="toggle active"><div class="toggle-button"></div></div>
+			<div id="toggle" class="active"><div id="toggle-button"></div></div>
 			<a href="index.html" class="nav-link"> About </a>
 			<a href="contact.html" class="nav-link"> Contact </a>
 			<a href="use.html" class="button nav-link"><strong> Use! </strong></a>
@@ -57,13 +57,21 @@
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<script type="text/javascript">
+		<script>
 			$(document).ready(function() {
-				$(".toggle").click(function() {
-					$(".toggle").toggleClass("active");
+				$("#toggle").click(function() {
+					$("#toggle").toggleClass("active");
 					$("body").toggleClass("night");
 				});
 			});
 		</script>
+		<noscript>
+			<!--day/night toggle relies on js; hide it if there's no js-->
+			<style>
+				#toggle {
+					display: none;
+				}
+			</style>
+		</noscript>
 	</body>
 </html>
