--- a/use.html
+++ b/use.html
@@ -31,8 +31,8 @@
 		<div id="main">
 			<div class="status"></div>
 			<div class="media"></div>
-			<div type="text" id="input-fields">
-				<input id="guess" type="text" />
+			<input id="guess" type="text" />
+			<div id="controls">
 				<button id="check" onclick="check()">Check</button>
 				<button id="refresh" onclick="setMedia(mediaOptions.media, mediaOptions.bw, mediaOptions.addon)">
 					Refresh
