--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Bird-ID | Contact</title>
 		<link href="style.css" rel="stylesheet" type="text/css" />
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans|Source+Sans+Pro&display=block" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
 	</head>
 
 	<body class="night">
@@ -18,14 +18,20 @@
 			<a href="use.html" class="button nav-link"><strong> Use! </strong></a>
 		</div>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				$("#toggle").click(function() {
-					$("#toggle").toggleClass("active");
-					$("body").toggleClass("night");
-				});
+		<script>
+			let toggle = document.getElementById("toggle");
+			toggle.addEventListener("click", function() {
+				toggle.classList.toggle("active");
+				document.getElementsByTagName("body")[0].classList.toggle("night");
 			});
 		</script>
+		<noscript>
+			<!--day/night toggle relies on js; hide it if there's no js-->
+			<style>
+				#toggle {
+					display: none;
+				}
+			</style>
+		</noscript>
 	</body>
 </html>
