--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="toggle" class="active"><div id="toggle-button"></div></div>
 			<a href="index.html" class="nav-link"> About </a>
 			<a href="contact.html" class="nav-link"> Contact </a>
-			<a href="use.html" class="button nav-link"><strong> Use! </strong></a>
+			<a href="use.html" id="use-button" class="button nav-link"><strong> Use! </strong></a>
 		</div>
 
 		<div id="info">
