--- a/public/use.html
+++ b/public/use.html
@@ -104,6 +104,6 @@
 				document.getElementsByTagName("body")[0].classList.toggle("night");
 			});
 		</script>
-		<script src="index.js"></script>
+		<script src="use.js"></script>
 	</body>
 </html>
