--- a/public/use.html
+++ b/public/use.html
@@ -18,7 +18,7 @@
 			<a href="contact.html" class="nav-link"> Contact </a>
 			<a id="login-button" class="button nav-link" onclick="login()"><strong>Login</strong></a>
 			<div id="profile">
-				<button id="profile-button" onclick="$('#profile-dropdown').toggle()">
+				<button id="profile-button" onclick="toggleProfile()">
 					<img id="profile-pic" alt="Profile Picture" height="40px" />&#x25BC;
 				</button>
 				<div id="profile-dropdown">
