--- a/public/use.html
+++ b/public/use.html
@@ -91,11 +91,7 @@
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			crossorigin="anonymous"
 		></script>
-		<script
-			src="https://browser.sentry-cdn.com/5.10.2/bundle.min.js"
-			integrity="sha384-ssBfXiBvlVC7bdA/VX03S88B5MwXQWdnpJRbUYFPgswlOBwETwTp6F3SMUNpo9M9"
-			crossorigin="anonymous"
-		></script>
+		<script src='https://js.sentry-cdn.com/dfe005fb9f5f419c9b849c8c01b73b7a.min.js' crossorigin="anonymous"></script>
 
 		<script>
 			let toggle = document.getElementById("toggle");
