--- a/public/use.html
+++ b/public/use.html
@@ -14,8 +14,8 @@
 		<div id="navigator">
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
 			<div id="toggle" class="active"><div id="toggle-button"></div></div>
-			<a href="index.html" class="nav-link"> About </a>
-			<a href="contact.html" class="nav-link"> Contact </a>
+			<a href="/" class="nav-link"> About </a>
+			<a href="/contact" class="nav-link"> Contact </a>
 			<a id="login-button" class="button nav-link" onclick="login()"><strong>Login</strong></a>
 			<div id="profile">
 				<button id="profile-button" onclick="toggleProfile()">
