--- a/public/contact.html
+++ b/public/contact.html
@@ -13,9 +13,9 @@
 		<div id="navigator">
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
 			<div id="toggle" class="active"><div id="toggle-button"></div></div>
-			<a href="index.html" class="nav-link"> About </a>
-			<a href="contact.html" class="nav-link"> Contact </a>
-			<a href="use.html" class="button nav-link"><strong> Use! </strong></a>
+			<a href="/" class="nav-link"> About </a>
+			<a href="/contact" class="nav-link"> Contact </a>
+			<a href="/use" class="button nav-link"><strong> Use! </strong></a>
 		</div>
 
 		<script>
