--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<title>Bird-ID | About</title>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
+		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
 	</head>
 
 	<body class="night">
