--- a/public/use.html
+++ b/public/use.html
@@ -7,6 +7,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<link href="use.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
+		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
 	</head>
 
 	<body onload="pageLoad()" class="night">
