--- a/public/status/404.html
+++ b/public/status/404.html
@@ -245,8 +245,8 @@
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="/" target="_blank">Go to homepage</a>
-		<a class="border-button" href="https://discord.gg/xDqYddK" target="_blank">Report a problem</a>
+		<a class="border-button" href="/" target="_blank" rel="noopener">Go to homepage</a>
+		<a class="border-button" href="https://discord.gg/xDqYddK" target="_blank" rel="noopener">Report a problem</a>
 	</div>
 </div>
 
