--- a/public/status/maintenance.html
+++ b/public/status/maintenance.html
@@ -223,6 +223,19 @@
       box-shadow: 0 0 60px #000000;
     }
 
+    a {
+      color: #ff4365;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: rgb(255, 138, 160);
+    }
+
+    a:visited {
+      color: rgb(212, 57, 86);
+    }
+
 </style>
 
   </head>
@@ -240,6 +253,7 @@
   <div class="context primary-text-color">
     
     <p>Sorry for the inconvenience. We'll be back up and running as fast as possible.</p>
+    <p>In the meantime, you may want to <a href="/">go home.</a></p>
 
   </div>
 </div>
