--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Bird-ID | Contact</title>
-		<link href="style.css" rel="stylesheet" type="text/css" />
+		<link href="/style.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
 		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
 	</head>
@@ -15,8 +15,8 @@
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
 			<div id="toggle" class="active"><div id="toggle-button"></div></div>
 			<a href="/" class="nav-link"> About </a>
-			<a href="/contact" class="nav-link"> Contact </a>
-			<a href="/use" class="button nav-link"><strong> Use! </strong></a>
+			<a href="/contact/" class="nav-link"> Contact </a>
+			<a href="/use/" class="button nav-link"><strong> Use! </strong></a>
 		</div>
 
 		<script>
