--- a/public/use/index.html
+++ b/public/use/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Bird-ID | Practice</title>
-		<link href="style.css" rel="stylesheet" type="text/css" />
-		<link href="use.css" rel="stylesheet" type="text/css" />
+		<link href="/style.css" rel="stylesheet" type="text/css" />
+		<link href="/use.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
 		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
@@ -17,7 +17,7 @@
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
 			<div id="toggle" class="active"><div id="toggle-button"></div></div>
 			<a href="/" class="nav-link"> About </a>
-			<a href="/contact" class="nav-link"> Contact </a>
+			<a href="/contact/" class="nav-link"> Contact </a>
 			<a id="login-button" class="button nav-link" onclick="login()"><strong>Login</strong></a>
 			<div id="profile">
 				<button id="profile-button" onclick="toggleProfile()">
@@ -102,6 +102,6 @@
 				document.getElementsByTagName("body")[0].classList.toggle("night");
 			});
 		</script>
-		<script src="use.js"></script>
+		<script src="/use.js"></script>
 	</body>
 </html>
