--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -7,9 +7,32 @@
 		<link href="/style.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
 		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
+		<script>
+			window.setState = function () {
+				const toggle = document.querySelector('#toggle')
+				const classes = document.querySelector('html').classList
+				if (
+					localStorage.theme === 'dark' ||
+					(!('theme' in localStorage) &&
+					window.matchMedia('(prefers-color-scheme: dark)').matches)
+				) {
+					classes.add('night')
+				} else {
+					classes.remove('night')
+				}
+				if (toggle) {
+					if (classes.contains('night')) {
+						toggle.classList.add('active') 
+					} else {
+						toggle.classList.remove('active') 
+					}
+				}
+			}
+			setState()
+		</script>
 	</head>
 
-	<body class="night">
+	<body>
 		<!-- navigation bar -->
 		<div id="navigator">
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
@@ -20,10 +43,11 @@
 		</div>
 
 		<script>
+			setState()
 			let toggle = document.getElementById("toggle");
 			toggle.addEventListener("click", function() {
-				toggle.classList.toggle("active");
-				document.getElementsByTagName("body")[0].classList.toggle("night");
+				localStorage.theme = localStorage.theme === 'dark' ? 'light' : 'dark'
+				setState()
 			});
 		</script>
 		<noscript>
