--- a/public/use/index.html
+++ b/public/use/index.html
@@ -9,9 +9,32 @@
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
 		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
 		<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+		<script>
+			window.setState = function () {
+				const toggle = document.querySelector('#toggle')
+				const classes = document.querySelector('html').classList
+				if (
+					localStorage.theme === 'dark' ||
+					(!('theme' in localStorage) &&
+					window.matchMedia('(prefers-color-scheme: dark)').matches)
+				) {
+					classes.add('night')
+				} else {
+					classes.remove('night')
+				}
+				if (toggle) {
+					if (classes.contains('night')) {
+						toggle.classList.add('active') 
+					} else {
+						toggle.classList.remove('active') 
+					}
+				}
+			}
+			setState()
+		</script>
 	</head>
 
-	<body onload="pageLoad()" class="night">
+	<body onload="pageLoad()">
 		<!-- navigation bar -->
 		<div id="navigator">
 			<span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
@@ -96,10 +119,11 @@
 		<script src='https://js.sentry-cdn.com/dfe005fb9f5f419c9b849c8c01b73b7a.min.js' crossorigin="anonymous"></script>
 
 		<script>
+			setState()
 			let toggle = document.getElementById("toggle");
 			toggle.addEventListener("click", function() {
-				toggle.classList.toggle("active");
-				document.getElementsByTagName("body")[0].classList.toggle("night");
+				localStorage.theme = localStorage.theme === 'dark' ? 'light' : 'dark'
+				setState()
 			});
 		</script>
 		<script src="/use.js"></script>
