fix options menu

--- a/public/use/index.html
+++ b/public/use/index.html
@@ -64,7 +64,7 @@
 				</button>
 				<button id="skip" onclick="skip()">Skip</button>
 				<button id="hint" onclick="hint()">Hint</button>
-				<button id="options" onclick='$("#options-menu").toggle()'>
+				<button id="options" onclick='toggleOptions()'>
 					Options
 				</button>
 			</div>
