remove custom plausible domain

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -6,7 +6,7 @@
 		<title>Bird-ID | Contact</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=block" rel="stylesheet" />
-		<script async defer data-domain="orni.sciolyid.org" src="https://stats.sciolyid.org/js/index.js"></script>
+		<script async defer data-domain="orni.sciolyid.org" src="https://plausible.io/js/plausible.js"></script>
 		<script>
 			window.setState = function () {
 				const toggle = document.querySelector('#toggle')
