--- a/public/use/index.html
+++ b/public/use/index.html
@@ -14,7 +14,7 @@
       async
       defer
       data-domain="orni.sciolyid.org"
-      src="https://stats.sciolyid.org/js/index.js"
+      src="https://plausible.io/js/plausible.js"
     ></script>
     <script>
       window.plausible =
