--- a/public/index.html
+++ b/public/index.html
@@ -36,19 +36,18 @@
 <body>
   <!-- navigation bar -->
   <div id="navigator">
-    <span id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</span>
+    <a href="/" id="title"><strong>Bird-ID</strong> - a website for aspiring ornithologists</a>
     <div id="toggle" class="active">
       <div id="toggle-button"></div>
     </div>
-    <a href="/" class="nav-link"> About </a>
-    <a href="/contact/" class="nav-link"> Contact </a>
+    <a href="/server/" class="nav-link">Discord Server</a>
+    <a href="/invite/" class="nav-link">Add Bird-ID!</a>
     <a href="/use/" id="use-button" class="button nav-link"><strong> Use! </strong></a>
   </div>
 
   <div id="info">
     <h1>Hello! Thanks for checking out Bird-ID, a website/Discord bot for aspiring ornithologists.</h1>
-    <p>You probably want to <a href="https://discord.gg/fXxYyDJ">join our Discord server</a>, <a
-        href="https://discord.com/api/oauth2/authorize?client_id=601917808137338900&permissions=268486656&scope=bot">add
+    <p>You probably want to <a href="/invite/">join our Discord server</a>, <a href="/server/">add
         this bot to an existing server</a>, or <a href="/use/">practice on the web</a>.</p>
     <h2>Usage</h2>
     <div>
