update use page styles

--- a/public/use/index.html
+++ b/public/use/index.html
@@ -53,7 +53,7 @@
     <a id="login-button" class="button nav-link" onclick="login()"><strong>Login</strong></a>
     <div id="profile">
       <button id="profile-button" onclick="toggleProfile()">
-        <img id="profile-pic" alt="Profile Picture" height="40px" />&#x25BC;
+        <img id="profile-pic" alt="Profile Picture" height="40" />&#x25BC;
       </button>
       <div id="profile-dropdown">
         <div id="login-text">Logged in as</div>
@@ -62,62 +62,64 @@
       </div>
     </div>
   </div>
-  <div id="main">
-    <div class="status"></div>
-    <div class="media"></div>
-    <input id="guess" type="text" />
-    <div id="controls">
-      <button id="check" onclick="check()">Check</button>
-      <button id="refresh" onclick="setMedia(mediaOptions.media, mediaOptions.bw, mediaOptions.addon)">
-        Refresh
-      </button>
-      <button id="skip" onclick="skip()">Skip</button>
-      <button id="hint" onclick="hint()">Hint</button>
-      <button id="options" onclick="toggleOptions()">Options</button>
+  <main>
+    <div id="main">
+      <div class="status"></div>
+      <div class="media"></div>
+      <input id="guess" type="text" />
+      <div id="controls">
+        <button id="check" onclick="check()">Check</button>
+        <button id="refresh" onclick="setMedia(mediaOptions.media, mediaOptions.bw, mediaOptions.addon)">
+          Refresh
+        </button>
+        <button id="skip" onclick="skip()">Skip</button>
+        <button id="hint" onclick="hint()">Hint</button>
+        <button id="options" onclick="toggleOptions()">Options</button>
+      </div>
+      <div id="options-menu">
+        <form id="options-form">
+          <h2 id="options-header">Options</h2>
+          <div id="media-type-field">
+            <span>Media Type:</span>
+            <select id="media-type" name="mediaType" onchange="onMediaTypeChange()">
+              <option value="images">Images</option>
+              <option value="songs">Songs</option>
+            </select>
+          </div>
+          <!--<h4>Black and White (for images)</h4>-->
+          <div id="bw-field">
+            <input id="bw" type="checkbox" name="bw" /> Black and white?
+          </div>
+          <div id="addons-field">
+            <span>Addons:</span>
+            <select id="addons" name="addons">
+              <option value="">None</option>
+              <option value="female">Female</option>
+              <option value="juvenile">Juvenile</option>
+            </select>
+          </div>
+        </form>
+        <button id="save" onclick="updateOptions()">Save Changes</button>
+      </div>
     </div>
-    <div id="options-menu">
-      <form id="options-form">
-        <h2 id="options-header">Options</h2>
-        <div id="media-type-field">
-          <span>Media Type:</span>
-          <select id="media-type" name="mediaType" onchange="onMediaTypeChange()">
-            <option value="images">Images</option>
-            <option value="songs">Songs</option>
-          </select>
-        </div>
-        <!--<h4>Black and White (for images)</h4>-->
-        <div id="bw-field">
-          <input id="bw" type="checkbox" name="bw" /> Black and white?
-        </div>
-        <div id="addons-field">
-          <span>Addons:</span>
-          <select id="addons" name="addons">
-            <option value="">None</option>
-            <option value="female">Female</option>
-            <option value="juvenile">Juvenile</option>
-          </select>
-        </div>
-      </form>
-      <button id="save" onclick="updateOptions()">Save Changes</button>
+    <div id="stats">
+      <h2 id="stats-header">Stats:</h2>
+      <p id="correct">Correct</p>
+      <p id="total">Total</p>
+      <p id="streak">in a row</p>
     </div>
-  </div>
-  <div id="stats">
-    <h2 id="stats-header">Stats:</h2>
-    <p id="correct">Correct</p>
-    <p id="total">Total</p>
-    <p id="streak">in a row</p>
-  </div>
-  <noscript>
-    <style>
-      #main,
-      #stats,
-      #toggle,
-      #profile {
-        display: none;
-      }
-    </style>
-    Please turn on Javascript or use a different browser.
-  </noscript>
+    <noscript>
+      <style>
+        #main,
+        #stats,
+        #toggle,
+        #profile {
+          display: none;
+        }
+      </style>
+      Please turn on Javascript or use a different browser.
+    </noscript>
+  </main>
   <script src="https://js.sentry-cdn.com/dfe005fb9f5f419c9b849c8c01b73b7a.min.js" crossorigin="anonymous"></script>
 
   <script>
